--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -19,6 +19,7 @@
 % Remove the 'osf' bit if you don't like the old style figures.
 \usepackage[T1]{fontenc}
 \usepackage[sc,osf]{mathpazo}
+\usepackage{color}
 
 
 % Set your name here
@@ -31,13 +32,14 @@
 % The following metadata will show up in the PDF properties
 \hypersetup{
   colorlinks = true,
-  urlcolor = black,
+  urlcolor = blue,
   pdfauthor = {\name},
   pdfkeywords = {computer science, systems engineering},
   pdftitle = {\name: Curriculum Vitae},
   pdfsubject = {Curriculum Vitae},
   pdfpagemode = UseNone
 }
+
 
 \geometry{
   body={6.5in, 8.5in},
@@ -79,11 +81,11 @@
 \vspace{0.25in}
 
 \begin{minipage}{0.45\linewidth}
+Address:\\
 Noethnitzer strasse 25\\
 %Technical University of Dresden,\\
 01187 Dresden\\
 Germany\\
-\\
 %  \href{http://www.mpi-sws.org}{Max Planck Institute for Software Systems} \\
 
  
@@ -101,7 +103,7 @@ Germany\\
 
 \section*{Research Interests}
 
-My research interests lie in the field of dependability in software systems, with a particular focus on fault tolerance and security. Within these fields, I investigate the applicability of modern hardware extensions to increase reliability of real-world applications while imposing low overheads.
+My research interests lie in the field of dependability in software systems, with a particular focus on fault tolerance and security. %Within these fields, I investigate the applicability of modern hardware extensions to increase reliability of real-world applications while imposing low overheads.
 
 %My research interests revolve around dependability in software systems, with the focus on software-based fault tolerance and security for legacy C/C++ programs.
 %In particular, I leverage recent sets of extensions in Intel processors (AVX, TSX, MPX, SGX) to decrease the performance penalty induced by current techniques.
@@ -118,13 +120,12 @@ My research interests lie in the field of dependability in software systems, wit
 \begin{itemize}
 
  \item \textbf{Ph.D. Candidate} in Computer Science (Dec 2013 - present)\\
- {\em  TU Dresden, Germany}\\
-%{\em Thesis: Incremental Parallel and Distributed Systems}\\
+ {\em  Technische Universit{\"a}t Dresden (TU Dresden), Germany}\\
 Advisors: Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia
 
  \item \textbf{Master of Science} in Computer Science (Oct 2011 - Nov 2013) \\
- {\em  TU Dresden, Germany}
-%Advisors: Dr. Diogo Behrens
+ {\em  Technische Universit{\"a}t Dresden (TU Dresden), Germany}
+
 
 \item \textbf{Diplom} in Electrical Engineering (Sep 2004 - Jul 2010)\\
   {\em Bauman University, Moscow, Russia} 
@@ -140,8 +141,8 @@ Advisors: Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia
 \begin{itemize}
 	\item Responsibilities:
 		\begin{itemize}
-		\item -- documenting and testing code of the PikeOS embedded operating system (C);
-		\item -- writing medical special-purpose programs (C++ and C\#).
+		\item --- documenting and testing code of the PikeOS embedded operating system (C);
+		\item --- writing medical special-purpose programs (C++ and C\#).
 		\end{itemize}
 	\item 
 \end{itemize}
@@ -170,15 +171,25 @@ Advisors: Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia
 %\vspace{3pt}
 {\bf Supervisors:} Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia\vspace{-13pt}\\
 
-In the context of my Ph.D. dissertation, I investigate and build systems to increase software dependability leveraging recent sets of extensions in Intel processors, with the focus on software-based fault tolerance and security for legacy C/C++ programs. %In particular, I leverage recent sets of extensions in Intel processors (AVX, TSX, MPX, SGX) to decrease the performance penalty induced by current dependability techniques.\\
+In the context of my Ph.D. dissertation, I investigate and build systems to increase software dependability leveraging recent sets of ISA extensions in Intel processors, with the focus on software-based fault tolerance and security for legacy C/C++ programs. %In particular, I leverage recent sets of extensions in Intel processors (AVX, TSX, MPX, SGX) to decrease the performance penalty induced by current dependability techniques.\\
 
 {\bf Research projects:}
 	\begin{itemize}%
-		\item Detailed evaluation of Intel MPX and discussion of its applicability in comparison to other bounds-checking approaches {\bf [USENIX ATC'17]*};
-		\item \emph{SGXBounds}: LLVM-based bounds checker to detect and tolerate security bugs in multithreaded legacy C/C++ programs inside Intel SGX enclaves {\bf [EuroSys'17]*};
-		\item \emph{Elzar}: LLVM compiler pass to detect and mask transient CPU faults in multithreaded legacy C/C++ programs using Intel AVX \href{http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016elzar.pdf}{{\bf [DSN'16]}} \href{https://github.com/tudinfse/elzar}{{\bf [code]}};
-		\item \emph{HAFT}: LLVM compiler pass to detect and tolerate transient CPU faults in multithreaded legacy C/C++ programs using Intel TSX \href{http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016HAFT.pdf}{{\bf [EuroSys'16]}} \href{https://github.com/tudinfse/haft}{{\bf [code]}};
-		\item \emph{$\Delta$-Encoding}: Source-to-source compiler to detect transient and permanent CPU faults in legacy C programs utilizing unused IPC resources of modern CPUs \href{http://se.inf.tu-dresden.de/pubs/papers/DELTAENC.pdf}{{\bf [DSN'15]}}.
+	
+		\item  {\bf Intel MPX Explained}: Detailed evaluation of {\tt Intel MPX} and discussion of its applicability in comparison to other bounds-checking approaches.\\
+			--- Software: \href{https://intel-mpx.github.io/}{Intel-MPX.github.io}
+		
+		\item {\bf SGXBounds}: LLVM-based bounds checker to detect and tolerate security bugs in multithreaded legacy C/C++ programs inside {\tt Intel SGX} enclaves.\\
+			--- Software: \href{https://github.com/tudinfse/sgxbounds}{https://github.com/tudinfse/sgxbounds}
+			
+			
+		\item {\bf Elzar}: LLVM compiler pass to detect and mask transient CPU faults in multithreaded legacy C/C++ programs using {\tt Intel AVX}.\\
+		 --- Software: \href{https://github.com/tudinfse/elzar}{https://github.com/tudinfse/elzar}
+		 
+		\item {\bf HAFT}: LLVM compiler pass to detect and tolerate transient CPU faults in multithreaded legacy C/C++ programs using {\tt Intel TSX}.\\
+				--- Software: \href{https://github.com/tudinfse/haft}{https://github.com/tudinfse/haft}
+				
+		\item {\bf $\Delta$-Encoding}: Source-to-source compiler to detect transient and permanent CPU faults in legacy C programs utilizing unused IPC resources of modern CPUs.
 	\end{itemize}%
 \end{itemize}%	
 
@@ -186,29 +197,29 @@ In the context of my Ph.D. dissertation, I investigate and build systems to incr
 \section*{Publications}
 
 {\bf Conference publications:}
-\begin{itemize}
-
+%\begin{itemize}
+\begin{enumerate} [label= $\lbrack$\arabic*$\rbrack$, resume]
 \item Intel MPX Explained\\
 {\em Oleksii Oleksenko, {Dmitrii Kuvaiskii}, Pramod Bhatotia,  Pascal Felber, and Christof Fetzer}\\
-{\bf USENIX ATC 2017}. (Under submission)
+{\bf USENIX ATC 2017} {\em (Under submission)}
 
 \item SGXBounds: Memory Safety for Shielded Execution\\
 {\em Dmitrii Kuvaiskii, Oleksii Oleksenko, Sergei Arnautov, Bohdan Trach, Pramod Bhatotia, Pascal Felber, and Christof Fetzer}\\
-{\bf  EuroSys 2017}. (Under submission)
+{\bf  EuroSys 2017} {\em (Under submission)}
 
 \item Elzar: Triple Modular Redundancy using Intel Advanced Vector Extensions\\
 {\em Dmitrii Kuvaiskii, Oleksii Oleksenko, Pramod Bhatotia, Pascal Felber, and  Christof Fetzer}\\
-{\bf  DSN 2016}.\\
-Software artifact: \href{https://github.com/tudinfse/elzar}{https://github.com/tudinfse/elzar}
+{\bf  DSN 2016}
+
 
 \item HAFT: Hardware-Assisted Fault Tolerance\\
 {\em Dmitrii Kuvaiskii, Rasha Faqeh, Pramod Bhatotia, Pascal Felber, and  Christof Fetzer}\\
-{\bf  EuroSys 2016}.\\
-Software artifact: \href{https://github.com/tudinfse/haft}{https://github.com/tudinfse/haft}
+{\bf  EuroSys 2016}
+
 
 \item $\Delta$-Encoding: Practical Encoded Processing\\
 {\em Dmitrii Kuvaiskii and Christof Fetzer}\\
-{\bf   DSN 2015}. Carter Award (best student paper).
+{\bf   DSN 2015} \underline{Carter Award (Best student paper)}
 
 %\item Needles in the Haystack---Tackling Bit Flips in Lightweight Compressed Data\\
 %{\em Till Kolditz, Dirk Habich, {Dmitrii Kuvaiskii}, Wolfgang Lehner, and Christof Fetzer}\\
@@ -216,25 +227,25 @@ Software artifact: \href{https://github.com/tudinfse/haft}{https://github.com/tu
 
 \item HardPaxos: Replication hardened against hardware errors\\
 {\em Diogo Behrens, {Dmitrii Kuvaiskii}, and Christof Fetzer}\\
-{\bf SRDS 2014}. Best paper award.
+{\bf SRDS 2014} \underline{Best paper award}
 
-\end{itemize}
+\end{enumerate}
 
-\clearpage
 
-{\bf Extended Abstracts:}
 
-\begin{itemize}
+{\bf Extended abstracts:}
+
+\begin{enumerate} [label= $\lbrack$\arabic*$\rbrack$, resume]
 
 \item{Efficient Fault Tolerance using Intel MPX and TSX}\\
 {\em Oleksii Oleksenko, {Dmitrii Kuvaiskii}, Pramod Bhatotia, Christof Fetzer, and Pascal Felber}\\
-Fast abstract at {\bf DSN 2016}.
+Fast abstract at {\bf DSN 2016}
 
 %\item{Practical Encoded Processing}\\
 %{\em {Dmitrii Kuvaiskii} and Christof Fetzer}\\
 %Poster at {\bf SRDS 2014}.
 
-\end{itemize}
+\end{enumerate}
 
 
 \section*{Talks}
@@ -248,19 +259,19 @@ Fast abstract at {\bf DSN 2016}.
 \end{itemize}
 
 
-\section*{Teaching experience}
+\section*{Teaching Experience}
 
 \begin{itemize}
-\item {\bf Teaching assistant:} Distributed Systems Engineering courses, TU Dresden, Dec 2013 - present.
+\item {\bf Teaching assistant:} Distributed Systems Engineering (DSE) courses, TU Dresden, Dec 2013 - present.
 \begin{itemize}
-	\item --- Concurrent and Distributed Systems lab, Summer Semesters 2014 - 2016 
-	\item --- Principles of Dependable Systems exercises, Winter Semesters 2014 - 2016
-	\item --- Software Fault Tolerance exercises, Summer Semesters 2014 - 2016
+	\item --- Concurrent and Distributed Systems lab, summer semesters: 2014, 2015, \& 2016
+	\item --- Principles of Dependable Systems exercises, winter semesters: 2014, 2015, \& 2016
+	\item --- Software Fault Tolerance exercises, summer semesters: 2014, 2015, \& 2016
 \end{itemize}
 \end{itemize}
 
 
-\section*{Professional activities}
+\section*{Professional Activities}
 
 
 \begin{itemize}
@@ -268,25 +279,11 @@ Fast abstract at {\bf DSN 2016}.
 \end{itemize}
   
 
-%\section*{Master thesis advisees}
-%\begin{itemize}
-%\item Oleksii Oleksenko\\
-%	--- Project: Elzar: Triple Modular Redundancy using Intel Advanced Vector Extensions
-%\end{itemize}
-
-
-%\section *{Open Source Softwares}
-%{\bf Current advisees:}
-%\begin{itemize}
-%\item Oleksii Oleksenko\\
-%	--- Projects: His thesis and papers
-%\end{itemize}
-
 \section*{Skills}
 \begin{itemize}
-	\item {\bf Languages}: C, C++, Assembly (expert), Unix shell, Python, R, (competent);
-	\item {\bf Frameworks}: LLVM, gdb, Intel Pin, Intel SDE;
-	\item {\bf Technologies}: Intel SSE/AVX, Intel TSX, Intel MPX, Intel SGX.
+	\item {\bf Languages}: C, C++, Assembly (expert), Unix shell, Python, R (competent)
+	\item {\bf Frameworks}: LLVM, gdb, Intel Pin, Intel SDE
+	\item {\bf Technologies}: Intel SSE/AVX, Intel TSX, Intel MPX, Intel SGX
 \end{itemize}
 
 
@@ -295,17 +292,14 @@ Fast abstract at {\bf DSN 2016}.
 \begin{itemize}
 
 \item {\bf Prof. Dr. Christof Fetzer }  \\
-%Professor (Systems Engineering Group)\\
 TU Dresden, Germany\\
 Email: \href{mailto:christof.fetzer@tu-dresden.de}{\tt christof.fetzer@tu-dresden.de}
       
 \item {\bf  Prof. Dr. Pramod Bhatotia }  \\
-%Professor\\
 University of Edinburgh, UK\\
 Email: \href{mailto:pramod.bhatotia@gmail.com}{\tt pramod.bhatotia@gmail.com}
 
 \item {\bf Prof. Dr. Pascal Felber} \\
-%Professor (Complex Systems Group)\\
 University of Neuchatel\\
 Email: \href{mailto:pascal.felber@unine.ch}{\tt pascal.felber@unine.ch}
 
