minor fixes in CV

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -136,7 +136,7 @@ Advisors: Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia
 
 \section*{Employment}
 
-{\bf Auriga Inc, Moscow, Russia, Sep 2010 - Aug 2011}\\
+{\bf Auriga Inc, Moscow, Russia} (Sep 2010 - Aug 2011)\\
 {\em Certification engineer, Software developer}
 \begin{itemize}
 	\item Responsibilities:
@@ -147,7 +147,7 @@ Advisors: Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia
 	\item 
 \end{itemize}
 
-{\bf Diasoft, Moscow, Russia, Sep 2007 - Aug 2010}\\
+{\bf Diasoft, Moscow, Russia} (Sep 2007 - Aug 2010)\\
 {\em Software developer}
 \begin{itemize}
 	\item Responsibilities: programming insurance subsystems using Transact SQL and Delphi.
@@ -157,7 +157,7 @@ Advisors: Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia
 \section*{Honors and Awards}
 
 \begin{itemize}
-\item \textbf{Carter Award (best student paper)} at DSN'15
+\item \textbf{Carter Award (Best student paper)} at DSN'15
 \item \textbf{Best paper award} at SRDS'14
 \item \textbf{Erasmus Mundus Action 2 MULTIC} scholarship, 2011-2013
 
@@ -275,7 +275,7 @@ Fast abstract at {\bf DSN 2016}
 
 
 \begin{itemize}
- \item { Shadow PC member:} {\bf EuroSys 2016}.
+ \item { Shadow PC member:} {\bf EuroSys 2016}
 \end{itemize}
   
 
@@ -300,7 +300,7 @@ University of Edinburgh, UK\\
 Email: \href{mailto:pramod.bhatotia@gmail.com}{\tt pramod.bhatotia@gmail.com}
 
 \item {\bf Prof. Dr. Pascal Felber} \\
-University of Neuchatel\\
+University of Neuchatel, Switzerland\\
 Email: \href{mailto:pascal.felber@unine.ch}{\tt pascal.felber@unine.ch}
 
 \end{itemize}
