--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -101,7 +101,7 @@ Germany\\
 \end{minipage}
 
 
-\section*{Research Interests}
+\section*{Interests}
 
 My research interests lie in the field of dependability in software systems, with a particular focus on fault tolerance and security. %Within these fields, I investigate the applicability of modern hardware extensions to increase reliability of real-world applications while imposing low overheads.
 
@@ -154,7 +154,7 @@ Advisors: Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia
 \end{itemize}
 
 
-\section*{Honors and Awards}
+\section*{Awards}
 
 \begin{itemize}
 \item \textbf{Carter Award (Best student paper)} at DSN'15
@@ -261,7 +261,7 @@ Fast abstract at {\bf DSN 2016}
 \end{itemize}
 
 
-\section*{Teaching Experience}
+\section*{Teaching}
 
 \begin{itemize}
 \item {\bf Teaching assistant:} Distributed Systems Engineering (DSE) courses, TU Dresden, Dec 2013 - present
@@ -273,7 +273,7 @@ Fast abstract at {\bf DSN 2016}
 \end{itemize}
 
 
-\section*{Professional Activities}
+\section*{Activities}
 
 
 \begin{itemize}
