--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -121,7 +121,7 @@ My research interests lie in the field of dependability in software systems, wit
 
  \item \textbf{Ph.D. Candidate} in Computer Science (Dec 2013 - present)\\
  {\em  Technische Universit{\"a}t Dresden (TU Dresden), Germany}\\
-Advisors: Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia
+Advisors: Prof. Christof Fetzer and Prof. Pramod Bhatotia
 
  \item \textbf{Master of Science} in Computer Science (Oct 2011 - Nov 2013) \\
  {\em  Technische Universit{\"a}t Dresden (TU Dresden), Germany}
@@ -169,7 +169,7 @@ Advisors: Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia
 \begin{itemize}
 \item {\bf Topic:} Dependable Systems Leveraging New ISA Extensions (Preliminary)\\
 %\vspace{3pt}
-{\bf Supervisors:} Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia\vspace{-13pt}\\
+{\bf Supervisors:} Prof. Christof Fetzer and Prof. Pramod Bhatotia\vspace{-13pt}\\
 
 In the context of my Ph.D. dissertation, I investigate and build systems to increase software dependability leveraging recent sets of ISA extensions in Intel processors, with the focus on software-based fault tolerance and security for legacy C/C++ programs. %In particular, I leverage recent sets of extensions in Intel processors (AVX, TSX, MPX, SGX) to decrease the performance penalty induced by current dependability techniques.\\
 
@@ -293,15 +293,15 @@ Fast abstract at {\bf DSN 2016}
 
 \begin{itemize}
 
-\item {\bf Prof. Dr. Christof Fetzer }  \\
+\item {\bf Prof. Christof Fetzer }  \\
 TU Dresden, Germany\\
 Email: \href{mailto:christof.fetzer@tu-dresden.de}{\tt christof.fetzer@tu-dresden.de}
       
-\item {\bf  Prof. Dr. Pramod Bhatotia }  \\
+\item {\bf  Prof. Pramod Bhatotia }  \\
 University of Edinburgh, UK\\
 Email: \href{mailto:pramod.bhatotia@gmail.com}{\tt pramod.bhatotia@gmail.com}
 
-\item {\bf Prof. Dr. Pascal Felber} \\
+\item {\bf Prof. Pascal Felber} \\
 University of Neuchatel, Switzerland\\
 Email: \href{mailto:pascal.felber@unine.ch}{\tt pascal.felber@unine.ch}
 
