--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -19,7 +19,6 @@
 % Remove the 'osf' bit if you don't like the old style figures.
 \usepackage[T1]{fontenc}
 \usepackage[sc,osf]{mathpazo}
-\usepackage{color}
 
 
 % Set your name here
@@ -32,14 +31,13 @@
 % The following metadata will show up in the PDF properties
 \hypersetup{
   colorlinks = true,
-  urlcolor = blue,
+  urlcolor = black,
   pdfauthor = {\name},
   pdfkeywords = {computer science, systems engineering},
   pdftitle = {\name: Curriculum Vitae},
   pdfsubject = {Curriculum Vitae},
   pdfpagemode = UseNone
 }
-
 
 \geometry{
   body={6.5in, 8.5in},
@@ -78,14 +76,14 @@
 % Alternatively, print name centered and bold:
 %\centerline{\huge \bf \name}
 
-\vspace{0.25in}
+%\vspace{0.25in}
 
 \begin{minipage}{0.45\linewidth}
-Address:\\
 Noethnitzer strasse 25\\
 %Technical University of Dresden,\\
 01187 Dresden\\
 Germany\\
+\\
 %  \href{http://www.mpi-sws.org}{Max Planck Institute for Software Systems} \\
 
  
@@ -101,9 +99,9 @@ Germany\\
 \end{minipage}
 
 
-\section*{Interests}
+\section*{Research Interests}
 
-My research interests lie in the field of dependability in software systems, with a particular focus on fault tolerance and security. %Within these fields, I investigate the applicability of modern hardware extensions to increase reliability of real-world applications while imposing low overheads.
+My research interests lie in the field of dependability in software systems, with a particular focus on fault tolerance and security. Within these fields, I investigate the applicability of modern hardware extensions to increase reliability of real-world applications while imposing low overheads.
 
 %My research interests revolve around dependability in software systems, with the focus on software-based fault tolerance and security for legacy C/C++ programs.
 %In particular, I leverage recent sets of extensions in Intel processors (AVX, TSX, MPX, SGX) to decrease the performance penalty induced by current techniques.
@@ -120,12 +118,13 @@ My research interests lie in the field of dependability in software systems, wit
 \begin{itemize}
 
  \item \textbf{Ph.D. Candidate} in Computer Science (Dec 2013 - present)\\
- {\em  Technische Universit{\"a}t Dresden (TU Dresden), Germany}\\
-Advisors: Prof. Christof Fetzer and Prof. Pramod Bhatotia
+ {\em  TU Dresden, Germany}\\
+%{\em Thesis: Incremental Parallel and Distributed Systems}\\
+Advisors: Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia
 
  \item \textbf{Master of Science} in Computer Science (Oct 2011 - Nov 2013) \\
- {\em  Technische Universit{\"a}t Dresden (TU Dresden), Germany}
-
+ {\em  TU Dresden, Germany}
+%Advisors: Dr. Diogo Behrens
 
 \item \textbf{Diplom} in Electrical Engineering (Sep 2004 - Jul 2010)\\
   {\em Bauman University, Moscow, Russia} 
@@ -136,28 +135,29 @@ Advisors: Prof. Christof Fetzer and Prof. Pramod Bhatotia
 
 \section*{Employment}
 
-{\bf Auriga Inc, Moscow, Russia} (Sep 2010 - Aug 2011)\\
+{\bf Auriga Inc, Moscow, Russia, Sep 2010 - Aug 2011}\\
 {\em Certification engineer, Software developer}
 \begin{itemize}
 	\item Responsibilities:
 		\begin{itemize}
-		\item --- documenting and testing code of the PikeOS embedded operating system (C)
-		\item --- writing medical special-purpose programs (C++ and C\#)
+		\item -- documenting and testing code of the PikeOS embedded operating system (C);
+		\item -- writing medical special-purpose programs (C++ and C\#).
 		\end{itemize}
 	\item 
 \end{itemize}
 
-{\bf Diasoft, Moscow, Russia} (Sep 2007 - Aug 2010)\\
+{\bf Diasoft, Moscow, Russia, Sep 2007 - Aug 2010}\\
 {\em Software developer}
 \begin{itemize}
-	\item Responsibilities: programming insurance subsystems using Transact SQL and Delphi
+	\item Responsibilities: programming insurance subsystems using Transact SQL and Delphi.
 \end{itemize}
 
 
-\section*{Awards}
+\section*{Honors and Awards}
 
 \begin{itemize}
-\item \textbf{Carter Award (Best student paper)} at DSN'15
+\item \textbf{Best paper award} at EuroSys'17
+\item \textbf{Carter Award (best student paper)} at DSN'15
 \item \textbf{Best paper award} at SRDS'14
 \item \textbf{Erasmus Mundus Action 2 MULTIC} scholarship, 2011-2013
 
@@ -167,29 +167,19 @@ Advisors: Prof. Christof Fetzer and Prof. Pramod Bhatotia
 \section* {Ph.D. Dissertation}
 
 \begin{itemize}
-\item {\bf Topic:} Dependable Systems Leveraging New ISA Extensions (Preliminary)\\
+\item {\bf Topic:} Dependable Systems Leveraging new ISA extensions (preliminary)\\
 %\vspace{3pt}
-{\bf Supervisors:} Prof. Christof Fetzer and Prof. Pramod Bhatotia\vspace{-13pt}\\
+{\bf Supervisors:} Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia\vspace{-13pt}\\
 
-In the context of my Ph.D. dissertation, I investigate and build systems to increase software dependability leveraging recent sets of ISA extensions in Intel processors, with the focus on software-based fault tolerance and security for legacy C/C++ programs. %In particular, I leverage recent sets of extensions in Intel processors (AVX, TSX, MPX, SGX) to decrease the performance penalty induced by current dependability techniques.\\
+In the context of my Ph.D. dissertation, I investigate and build systems to increase software dependability leveraging recent sets of extensions in Intel processors, with the focus on software-based fault tolerance and security for legacy C/C++ programs. %In particular, I leverage recent sets of extensions in Intel processors (AVX, TSX, MPX, SGX) to decrease the performance penalty induced by current dependability techniques.\\
 
 {\bf Research projects:}
 	\begin{itemize}%
-	
-		\item  {\bf Intel MPX Explained}: Detailed evaluation of {\tt Intel MPX} and discussion of its applicability in comparison to other bounds-checking approaches.\\
-			--- Software: \href{https://intel-mpx.github.io/}{Intel-MPX.github.io}
-		
-		\item {\bf SGXBounds}: LLVM-based bounds checker to detect and tolerate security bugs in multithreaded legacy C/C++ programs inside {\tt Intel SGX} enclaves.\\
-			--- Software: \href{https://github.com/tudinfse/sgxbounds}{https://github.com/tudinfse/sgxbounds}
-			
-			
-		\item {\bf Elzar}: LLVM compiler pass to detect and mask transient CPU faults in multithreaded legacy C/C++ programs using {\tt Intel AVX}.\\
-		 --- Software: \href{https://github.com/tudinfse/elzar}{https://github.com/tudinfse/elzar}
-		 
-		\item {\bf HAFT}: LLVM compiler pass to detect and tolerate transient CPU faults in multithreaded legacy C/C++ programs using {\tt Intel TSX}.\\
-				--- Software: \href{https://github.com/tudinfse/haft}{https://github.com/tudinfse/haft}
-				
-		\item {\bf $\Delta$-Encoding}: Source-to-source compiler to detect transient and permanent CPU faults in legacy C programs utilizing unused IPC resources of modern CPUs.
+		\item Detailed evaluation of Intel MPX and discussion of its applicability in comparison to other bounds-checking approaches {\bf [ACM CCS'17]*};
+		\item \emph{SGXBounds}: LLVM-based bounds checker to detect and tolerate security bugs in multithreaded legacy C/C++ programs inside Intel SGX enclaves {\bf [EuroSys'17]};
+		\item \emph{Elzar}: LLVM compiler pass to detect and mask transient CPU faults in multithreaded legacy C/C++ programs using Intel AVX \href{http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016elzar.pdf}{{\bf [DSN'16]}} \href{https://github.com/tudinfse/elzar}{{\bf [code]}};
+		\item \emph{HAFT}: LLVM compiler pass to detect and tolerate transient CPU faults in multithreaded legacy C/C++ programs using Intel TSX \href{http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016HAFT.pdf}{{\bf [EuroSys'16]}} \href{https://github.com/tudinfse/haft}{{\bf [code]}};
+		\item \emph{$\Delta$-Encoding}: Source-to-source compiler to detect transient and permanent CPU faults in legacy C programs utilizing unused IPC resources of modern CPUs \href{http://se.inf.tu-dresden.de/pubs/papers/DELTAENC.pdf}{{\bf [DSN'15]}}.
 	\end{itemize}%
 \end{itemize}%	
 
@@ -197,29 +187,30 @@ In the context of my Ph.D. dissertation, I investigate and build systems to incr
 \section*{Publications}
 
 {\bf Conference publications:}
-%\begin{itemize}
-\begin{enumerate} [label= $\lbrack$\arabic*$\rbrack$, resume]
+\begin{itemize}
+
 \item Intel MPX Explained\\
 {\em Oleksii Oleksenko, {Dmitrii Kuvaiskii}, Pramod Bhatotia,  Pascal Felber, and Christof Fetzer}\\
-{\bf USENIX ATC 2017} {\em (Under submission)}
+{\bf ACM CCS 2017}. (Under submission)
 
 \item SGXBounds: Memory Safety for Shielded Execution\\
 {\em Dmitrii Kuvaiskii, Oleksii Oleksenko, Sergei Arnautov, Bohdan Trach, Pramod Bhatotia, Pascal Felber, and Christof Fetzer}\\
-{\bf  EuroSys 2017} {\em (Under submission)}
+{\bf  EuroSys 2017}. Best paper award.\\
+Software artifact: \href{https://github.com/tudinfse/sgxbounds}{https://github.com/tudinfse/sgxbounds}
 
 \item Elzar: Triple Modular Redundancy using Intel Advanced Vector Extensions\\
 {\em Dmitrii Kuvaiskii, Oleksii Oleksenko, Pramod Bhatotia, Pascal Felber, and  Christof Fetzer}\\
-{\bf  DSN 2016}
-
+{\bf  DSN 2016}.\\
+Software artifact: \href{https://github.com/tudinfse/elzar}{https://github.com/tudinfse/elzar}
 
 \item HAFT: Hardware-Assisted Fault Tolerance\\
 {\em Dmitrii Kuvaiskii, Rasha Faqeh, Pramod Bhatotia, Pascal Felber, and  Christof Fetzer}\\
-{\bf  EuroSys 2016}
-
+{\bf  EuroSys 2016}.\\
+Software artifact: \href{https://github.com/tudinfse/haft}{https://github.com/tudinfse/haft}
 
 \item $\Delta$-Encoding: Practical Encoded Processing\\
 {\em Dmitrii Kuvaiskii and Christof Fetzer}\\
-{\bf   DSN 2015} \underline{Carter Award (Best student paper)}
+{\bf   DSN 2015}. Carter Award (best student paper).
 
 %\item Needles in the Haystack---Tackling Bit Flips in Lightweight Compressed Data\\
 %{\em Till Kolditz, Dirk Habich, {Dmitrii Kuvaiskii}, Wolfgang Lehner, and Christof Fetzer}\\
@@ -227,65 +218,79 @@ In the context of my Ph.D. dissertation, I investigate and build systems to incr
 
 \item HardPaxos: Replication hardened against hardware errors\\
 {\em Diogo Behrens, {Dmitrii Kuvaiskii}, and Christof Fetzer}\\
-{\bf SRDS 2014} \underline{Best paper award}
+{\bf SRDS 2014}. Best paper award.
 
-\end{enumerate}
+\end{itemize}
 
+\clearpage
 
+{\bf Extended Abstracts:}
 
-{\bf Extended abstracts:}
-
-\begin{enumerate} [label= $\lbrack$\arabic*$\rbrack$, resume]
+\begin{itemize}
 
 \item{Efficient Fault Tolerance using Intel MPX and TSX}\\
 {\em Oleksii Oleksenko, {Dmitrii Kuvaiskii}, Pramod Bhatotia, Christof Fetzer, and Pascal Felber}\\
-Fast abstract at {\bf DSN 2016}
+Fast abstract at {\bf DSN 2016}.
 
 %\item{Practical Encoded Processing}\\
 %{\em {Dmitrii Kuvaiskii} and Christof Fetzer}\\
 %Poster at {\bf SRDS 2014}.
 
-\end{enumerate}
+\end{itemize}
 
 
 \section*{Talks}
 \begin{itemize}
-\item {\bf DSN'16}, Toulouse, June 2016\\
-	{\em  Elzar: Triple Modular Redundancy using Intel Advanced Vector Extensions}
-
-\item {\bf EuroSys'16}, London, April 2016\\
+\item ACM EuroSys'17, Belgrade, April 2017\\
+{\em  SGXBounds: Memory Safety for Shielded Execution}
+\item ACM EuroSys'16, London, April 2016\\
 	{\em  HAFT: Hardware-Assisted Fault Tolerance}
-	
-\item {\bf DSN'15}, Rio de Janeiro, June 2015\\
+\item IEEE DSN'16, Toulouse, June 2016\\
+	{\em  Elzar: Triple Modular Redundancy using Intel Advanced Vector Extensions}
+\item IEEE DSN'15, Rio de Janeiro, June 2015\\
 {\em  $\Delta$-Encoding: Practical Encoded Processing}
 \end{itemize}
 
 
-\section*{Teaching}
+\section*{Teaching experience}
 
 \begin{itemize}
-\item {\bf Teaching assistant:} Distributed Systems Engineering (DSE) courses, TU Dresden, Dec 2013 - present
+\item {\bf Teaching assistant:} Distributed Systems Engineering courses, TU Dresden, Dec 2013 - present.
 \begin{itemize}
-	\item --- Concurrent and Distributed Systems lab, summer semesters: 2014, 2015, \& 2016
-	\item --- Principles of Dependable Systems exercises, winter semesters: 2014, 2015, \& 2016
-	\item --- Software Fault Tolerance exercises, summer semesters: 2014, 2015, \& 2016
+	\item --- Concurrent and Distributed Systems lab, Summer Semesters 2014 - 2016 
+	\item --- Principles of Dependable Systems exercises, Winter Semesters 2014 - 2016
+	\item --- Software Fault Tolerance exercises, Summer Semesters 2014 - 2016
 \end{itemize}
 \end{itemize}
 
 
-\section*{Activities}
+\section*{Professional activities}
 
 
 \begin{itemize}
- \item { Shadow PC member:} {\bf EuroSys 2016}
+ \item { Shadow PC member:} {\bf EuroSys 2016}.
 \end{itemize}
   
 
+%\section*{Master thesis advisees}
+%\begin{itemize}
+%\item Oleksii Oleksenko\\
+%	--- Project: Elzar: Triple Modular Redundancy using Intel Advanced Vector Extensions
+%\end{itemize}
+
+
+%\section *{Open Source Softwares}
+%{\bf Current advisees:}
+%\begin{itemize}
+%\item Oleksii Oleksenko\\
+%	--- Projects: His thesis and papers
+%\end{itemize}
+
 \section*{Skills}
 \begin{itemize}
-	\item {\bf Languages}: C, C++, Assembly (expert), Unix shell, Python, R (competent)
-	\item {\bf Frameworks}: LLVM, gdb, Intel Pin, Intel SDE
-	\item {\bf Technologies}: Intel SSE/AVX, Intel TSX, Intel MPX, Intel SGX
+	\item {\bf Languages}: C, C++, Assembly (expert), Unix shell, Python, R (competent);
+	\item {\bf Frameworks}: LLVM, gdb, Intel Pin, Intel SDE;
+	\item {\bf Technologies}: Intel SSE/AVX, Intel TSX, Intel MPX, Intel SGX.
 \end{itemize}
 
 
@@ -293,16 +298,19 @@ Fast abstract at {\bf DSN 2016}
 
 \begin{itemize}
 
-\item {\bf Prof. Christof Fetzer }  \\
+\item {\bf Prof. Dr. Christof Fetzer }  \\
+%Professor (Systems Engineering Group)\\
 TU Dresden, Germany\\
 Email: \href{mailto:christof.fetzer@tu-dresden.de}{\tt christof.fetzer@tu-dresden.de}
       
-\item {\bf  Prof. Pramod Bhatotia }  \\
+\item {\bf  Prof. Dr. Pramod Bhatotia }  \\
+%Professor\\
 University of Edinburgh, UK\\
 Email: \href{mailto:pramod.bhatotia@gmail.com}{\tt pramod.bhatotia@gmail.com}
 
-\item {\bf Prof. Pascal Felber} \\
-University of Neuchatel, Switzerland\\
+\item {\bf Prof. Dr. Pascal Felber} \\
+%Professor (Complex Systems Group)\\
+University of Neuchatel\\
 Email: \href{mailto:pascal.felber@unine.ch}{\tt pascal.felber@unine.ch}
 
 \end{itemize}
