--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -146,6 +146,8 @@ Advisors: Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia
 	\item 
 \end{itemize}
 
+\vspace{-2mm}
+
 {\bf Diasoft, Moscow, Russia, Sep 2007 - Aug 2010}\\
 {\em Software developer}
 \begin{itemize}
@@ -224,19 +226,19 @@ Software artifact: \href{https://github.com/tudinfse/haft}{https://github.com/tu
 
 \clearpage
 
-{\bf Extended Abstracts:}
+%{\bf Extended Abstracts:}
 
-\begin{itemize}
+%\begin{itemize}
 
-\item{Efficient Fault Tolerance using Intel MPX and TSX}\\
-{\em Oleksii Oleksenko, {Dmitrii Kuvaiskii}, Pramod Bhatotia, Christof Fetzer, and Pascal Felber}\\
-Fast abstract at {\bf DSN 2016}.
+%\item{Efficient Fault Tolerance using Intel MPX and TSX}\\
+%{\em Oleksii Oleksenko, {Dmitrii Kuvaiskii}, Pramod Bhatotia, Christof Fetzer, and Pascal Felber}\\
+%Fast abstract at {\bf DSN 2016}.
 
 %\item{Practical Encoded Processing}\\
 %{\em {Dmitrii Kuvaiskii} and Christof Fetzer}\\
 %Poster at {\bf SRDS 2014}.
 
-\end{itemize}
+%\end{itemize}
 
 
 \section*{Talks}
