added Intel Labs; added Fex

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -135,6 +135,16 @@ Advisors: Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia
 
 \section*{Employment}
 
+{\bf Intel Labs, Hillsboro, OR, USA, July 2017 - Sep 2017}\\
+{\em Datacenter Security Intern}
+\begin{itemize}
+	\item Responsibilities: developing applications with Intel SGX (C/C++).
+    \vspace{-2mm}
+	\item Supervisor: Mona Vij.
+\end{itemize}
+
+\vspace{2mm}
+
 {\bf Auriga Inc, Moscow, Russia, Sep 2010 - Aug 2011}\\
 {\em Certification engineer, Software developer}
 \begin{itemize}
@@ -177,7 +187,7 @@ In the context of my Ph.D. dissertation, I investigate and build systems to incr
 
 {\bf Research projects:}
 	\begin{itemize}%
-		\item Detailed evaluation of Intel MPX and discussion of its applicability in comparison to other bounds-checking approaches {\bf [ACM CCS'17]*};
+		\item Detailed evaluation of Intel MPX and discussion of its applicability in comparison to other bounds-checking approaches {\bf [ACM ASPLOS'17]*};
 		\item \emph{SGXBounds}: LLVM-based bounds checker to detect and tolerate security bugs in multithreaded legacy C/C++ programs inside Intel SGX enclaves {\bf [EuroSys'17]};
 		\item \emph{Elzar}: LLVM compiler pass to detect and mask transient CPU faults in multithreaded legacy C/C++ programs using Intel AVX \href{http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016elzar.pdf}{{\bf [DSN'16]}} \href{https://github.com/tudinfse/elzar}{{\bf [code]}};
 		\item \emph{HAFT}: LLVM compiler pass to detect and tolerate transient CPU faults in multithreaded legacy C/C++ programs using Intel TSX \href{http://se.inf.tu-dresden.de/pubs/papers/Kuvaiskii2016HAFT.pdf}{{\bf [EuroSys'16]}} \href{https://github.com/tudinfse/haft}{{\bf [code]}};
@@ -193,7 +203,7 @@ In the context of my Ph.D. dissertation, I investigate and build systems to incr
 
 \item Intel MPX Explained\\
 {\em Oleksii Oleksenko, {Dmitrii Kuvaiskii}, Pramod Bhatotia,  Pascal Felber, and Christof Fetzer}\\
-{\bf ACM CCS 2017}. (Under submission)
+{\bf ACM ASPLOS 2017}. (Under submission)
 
 \item SGXBounds: Memory Safety for Shielded Execution\\
 {\em Dmitrii Kuvaiskii, Oleksii Oleksenko, Sergei Arnautov, Bohdan Trach, Pramod Bhatotia, Pascal Felber, and Christof Fetzer}\\
@@ -224,7 +234,7 @@ Software artifact: \href{https://github.com/tudinfse/haft}{https://github.com/tu
 
 \end{itemize}
 
-\clearpage
+%\clearpage
 
 %{\bf Extended Abstracts:}
 
@@ -308,7 +318,7 @@ Email: \href{mailto:christof.fetzer@tu-dresden.de}{\tt christof.fetzer@tu-dresde
 \item {\bf  Prof. Dr. Pramod Bhatotia }  \\
 %Professor\\
 University of Edinburgh, UK\\
-Email: \href{mailto:pramod.bhatotia@gmail.com}{\tt pramod.bhatotia@gmail.com}
+Email: \href{mailto:pramod.bhatotia@ed.ac.uk}{\tt pramod.bhatotia@ed.ac.uk}
 
 \item {\bf Prof. Dr. Pascal Felber} \\
 %Professor (Complex Systems Group)\\
