--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -118,9 +118,9 @@ My research interests lie in the field of dependability in software systems, wit
 
 \begin{itemize}
 
- \item \textbf{Ph.D.} in Computer Science, Summa Cum laude (Dec 2013 - Jan 2018)\\
+ \item \textbf{Ph.D.} in Computer Science  (Dec 2013 - Jan 2018)\\
  {\em  TU Dresden, Germany}\\
-%{\em Thesis: Incremental Parallel and Distributed Systems}\\
+{\em Thesis: Hardware-Assisted Dependable Systems}, {\bf Summa cum laude}\\
 Advisors: Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia
 
  \item \textbf{M.Sc.} in Computer Science (Oct 2011 - Nov 2013) \\
@@ -179,6 +179,7 @@ Advisors: Prof. Dr. Christof Fetzer and Prof. Dr. Pramod Bhatotia
 \section*{Honors and Awards}
 
 \begin{itemize}
+\item \textbf{Summa cum laude} for PhD thesis, 2018
 \item \textbf{Best paper award} at EuroSys'17
 \item \textbf{Carter Award (best student paper)} at DSN'15
 \item \textbf{Best paper award} at SRDS'14
